--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@ngrx/store": "^16.0.0",
+    "@ngrx/store-devtools": "^16.0.0",
     "bootstrap": "^5.3.0-alpha3",
     "concurrently": "^8.0.1",
     "json-server": "^0.17.3",
